# foma

./: CMakeLists.txt
foma/: apply.c  coaccessible.c  coaccessible_r.c  constructions.c  constructions_r.c  determinize.c  determinize_r.c  dynarray.c  dynarray_r.c  extract.c  extract_r.c  flags.c  flags_r.c  foma.c  foma_r.h  fomalib.h  fomalib_r.h  fomalibconf.h  fomalibconf_r.h  iface.c  int_stack.c  int_stack_r.c  io.c  io_r.c  lexcread.c  lexcread_r.c  minimize.c  minimize_r.c  reverse.c  reverse_r.c  rewrite.c  rewrite_r.c  sigma.c  spelling.c  spelling_r.c  stack.c  structures.c  structures_r.c  topsort_r.c
